--- a/layouts/settings_popup.json
+++ b/layouts/settings_popup.json
@@ -46,25 +46,28 @@
 				"opt_badges",
                 "opt_overworld",
                 "opt_hidden",
-                "opt_npcgifts",
-                "opt_keyitems",
-                "opt_cartridges"
+                "opt_npcgifts"
             ],
             [
+                "opt_keyitems",
+                "opt_cartridges",
                 "opt_trainer_full",
                 "opt_rods",
-                "opt_poketchapps",
-                "opt_shoes",
-                "opt_bicycle",
-                "opt_pokedex"
+                "opt_poketchapps"
             ],
             [
+                "opt_shoes",
+                "opt_bicycle",
+                "opt_pokedex",
                 "opt_accessories",
-                "opt_ssticket",
+                "opt_ssticket"
+            ],
+            [
                 "opt_marsh_pass",
                 "opt_storage_key",
                 "opt_bag",
-				"opt_hmreader"
+				"opt_hmreader",
+				"opt_timeitems"
             ]
         ]
     },
