--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Pokemon Platinum Archipelago",
     "game_name": "Pokemon Platinum",
-    "package_version": "2.0.0 Beta",
+    "package_version": "2.0.0 Beta 1",
     "package_uid": "pokemon_platinum_ap",
     "min_poptracker_version": "0.33.0",
     "author": "palex00 & Radis7Noir",
